--- a/.htaccess
+++ b/.htaccess
@@ -1,49 +1,3 @@
-# PHP5 KM01
-# AddType application/x-httpd-php5 .php
-
-# PHP5 auf 1&1
-# AddType x-mapp-php5 .php
-# AddHandler x-mapp-php5 .php
-
-# Einstellungen für KM01, KM05
-# php_value register_globals off
-# php_value upload_max_filesize 200M
-# php_value post_max_size 200M
-
-ExpiresActive On
-ExpiresDefault "access plus 1 days"
-ExpiresByType image/gif "access plus 7 days"
-ExpiresByType image/jpeg "access plus 7 days"
-ExpiresByType image/png "access plus 7 days"
-ExpiresByType text/javascript "access plus 2 hours"
-ExpiresByType application/pdf "access plus 1 seconds"
-
-<FilesMatch "\.(ico|flv|eot|woff|svg|ttf|htc)$">
-	Header set Cache-Control "max-age=29030400, public"
-</FilesMatch>
-<FilesMatch "\.(jpg|jpeg|png|gif|swf|css|js)$">
-	Header set Cache-Control "max-age=604800, public"
-</FilesMatch>
-<FilesMatch "\.(xml|txt)$">
-	Header set Cache-Control "max-age=172800, proxy-revalidate"
-</FilesMatch>
-<FilesMatch "\.(html|htm|pdf)$">
-	Header set Cache-Control "max-age=60, private, proxy-revalidate"
-</FilesMatch>
-
-<FilesMatch "\.(.*)$">
-	Deny from all
-</FilesMatch>
-<FilesMatch "\.(?i:php|html|xml)$">
-	Allow from all
-</FilesMatch>
-<FilesMatch "robots.txt|favicon.ico$">
-	Allow from all
-</FilesMatch>
-<Files "admin.php">
-  Satisfy Any
-</Files>
-
 <IfModule mod_deflate.c>
   AddOutputFilterByType DEFLATE text/plain text/html text/xml
   AddOutputFilterByType DEFLATE text/css text/javascript
@@ -54,10 +8,10 @@ ExpiresByType application/pdf "access plus 1 seconds"
 </IfModule>
 
 RewriteEngine on
-Options +FollowSymLinks
-Options +SymlinksIfOwnerMatch
+#Options +FollowSymLinks
+#Options +SymlinksIfOwnerMatch
 
-RewriteBase /ehe-ini.de/
+RewriteBase /ehe-ini-de/
 
 RewriteCond %{HTTP_HOST}   !^www\..* [NC]
 RewriteCond %{HTTP_HOST}   !^webdev3* [NC]
